--- a/src/Components/Blog/Blog.css
+++ b/src/Components/Blog/Blog.css
@@ -99,7 +99,7 @@
   display: flex;
   flex-direction: row;
   width: inherit;
-  height: 350px;
+  /* height: 350px; */
   justify-content: space-between;
 }
 
