--- a/src/Components/Subskill/newSubskill.css
+++ b/src/Components/Subskill/newSubskill.css
@@ -68,6 +68,7 @@
     color: #787878;
     display: flex;
     align-items: center;
+    padding-left: 1rem;
 }
 
 .resourceLink :hover {
@@ -85,5 +86,5 @@
     display: flex;
     align-items: center;
     background-color: white;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
