--- a/src/Components/Subskill/newSubskill.css
+++ b/src/Components/Subskill/newSubskill.css
@@ -1,90 +1,86 @@
 .try {
-    /* border-left: 1px solid #000000;
+  /* border-left: 1px solid #000000;
     padding-left: 2rem; */
-    padding-bottom: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
-.level{
-    background: #E7E8FF;
-    border-radius: .3rem;
-    padding-top: 0%;
-    padding-bottom: 0%;
+.level {
+  background: #e7e8ff;
+  border-radius: 0.3rem;
+  padding-top: 0%;
+  padding-bottom: 0%;
 }
 
-.levelName{
-    
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 1rem;
-    /* line-height: 2rem; */
-    display: flex;
-    align-items: center;
-    
-    color: #586060;
+.levelName {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  /* line-height: 2rem; */
+  display: flex;
+  align-items: center;
+
+  color: #586060;
 }
-.outerlevelsubtopic{
-    /* border-left: 1px solid black ; */
-    /* background-color: blue; */
-    margin-left: 2rem;
-    /* margin-top: .8rem; */
+.outerlevelsubtopic {
+  /* border-left: 1px solid black ; */
+  /* background-color: blue; */
+  margin-left: 2rem;
+  /* margin-top: .8rem; */
 }
 
-.level1{
-    
-    margin-top:1rem;
-    background: #E8F7FC;
-    border-radius: 9px;
-    padding: 1rem 1rem;
+.level1 {
+  margin-top: 1rem;
+  background: #e8f7fc;
+  border-radius: 9px;
+  padding: 1rem 1rem;
 }
 .level2 {
-    margin-top:1rem;
-    background: #FFE4E4;
-    border-radius: 9px;
-    padding: 1rem 1rem;
+  margin-top: 1rem;
+  background: #ffe4e4;
+  border-radius: 9px;
+  padding: 1rem 1rem;
 }
 
 .subtopic {
-
-    margin-top:1rem;
-    background: #E8F7FC;
-    border-radius: 9px;
-    /* padding: 1rem 1rem; */
-    background: #E8F7FC;
-
+  margin-top: 1rem;
+  background: #e8f7fc;
+  border-radius: 9px;
+  /* padding: 1rem 1rem; */
+  background: #e8f7fc;
 }
 
 .subtopicsDropdown {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
-.resourceLink{
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: 500;
-    font-size: .8rem;
-    line-height: 1.5rem;
-    color: #787878;
-    display: flex;
-    align-items: center;
-    padding-left: 1rem;
+.resourceLink {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.8rem;
+  line-height: 1.5rem;
+  color: #787878;
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
 }
 
 .resourceLink :hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.progCircle{
-    width: 1rem;
-    height: 1rem;
-    background-color: #aaa;
-    border-radius: 50%;
-    position: absolute;
-    left: 14%;
-    margin-top: .7rem;
-    display: flex;
-    align-items: center;
-    background-color: white;
-    /* border: 1px solid black; */
+.progCircle {
+  width: 1rem;
+  height: 1rem;
+  background-color: #aaa;
+  border-radius: 50%;
+  position: absolute;
+  left: 14%;
+  margin-top: 0.7rem;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  /* border: 1px solid black; */
 }
