--- a/src/Styles/Header.css
+++ b/src/Styles/Header.css
@@ -181,3 +181,9 @@
   text-underline-offset: 24.2px;
   text-decoration-thickness: 3px;
 }
+
+/* .logout {
+  padding: 0px 12px;
+  outline: none;
+  border: none;
+} */
