feedback btns added

--- a/src/Components/Subskill/newSubskill.css
+++ b/src/Components/Subskill/newSubskill.css
@@ -84,3 +84,31 @@
   background-color: white;
   /* border: 1px solid black; */
 }
+
+.resourceLink > .understand {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  display: flex;
+  align-items: center;
+
+  color: #000000;
+}
+
+.rating {
+  margin-left: 6px;
+}
+
+.rating > span {
+  margin: 0 6px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 18px;
+  align-items: center;
+
+  color: #000000;
+}
