--- a/src/Components/Subskill/newSubskill.css
+++ b/src/Components/Subskill/newSubskill.css
@@ -65,6 +65,13 @@
   display: flex;
   align-items: center;
   padding-left: 1rem;
+  overflow-x: scroll;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none; 
+}
+
+.resourceLink::-webkit-scrollbar {
+  display: none;
 }
 
 .resourceLink :hover {
@@ -111,4 +118,8 @@
   align-items: center;
 
   color: #000000;
+}
+
+.colbuttonpadding {
+  padding: 0 .2rem;
 }
