--- a/src/Styles/Learn.css
+++ b/src/Styles/Learn.css
@@ -3,10 +3,13 @@
   position: absolute;
   left: 85%;
   top: 13%;
+color: #8AD4FF;
+
+
 }
 
 .siderow > p > a {
-  color: #586060;
+  
   font-weight: 550;
 }
 
@@ -15,7 +18,7 @@
 }
 
 .siderow > p:nth-last-child(1) > a {
-  color: #8750a9;
+  
 }
 
 .container {
@@ -24,7 +27,10 @@
 
 @media screen and (max-width: 768px) {
   .siderow {
-    display: none;
+    left: 0%;
+  top: 0%;
+  position: relative;
+    
   }
 }
 
